//------------------------------------------------------------------------------
// <auto-generated>
//     Этот код создан по шаблону.
//
//     Изменения, вносимые в этот файл вручную, могут привести к непредвиденной работе приложения.
//     Изменения, вносимые в этот файл вручную, будут перезаписаны при повторном создании кода.
// </auto-generated>
//------------------------------------------------------------------------------

namespace ElectronicSchoolDaybook
{
    using System;
    using System.Collections.Generic;
    
    public partial class Grade
    {
        public int ID { get; set; }
        public int StudentID { get; set; }
        public int SubjectTeacherID { get; set; }
        public int Grade1 { get; set; }
        public System.DateTime Date { get; set; }
        public string CommentTeacher { get; set; }
    
        public virtual Student Student { get; set; }
        public virtual SubjectTeacher SubjectTeacher { get; set; }
    }
}
