//------------------------------------------------------------------------------
// <auto-generated>
//     Этот код создан по шаблону.
//
//     Изменения, вносимые в этот файл вручную, могут привести к непредвиденной работе приложения.
//     Изменения, вносимые в этот файл вручную, будут перезаписаны при повторном создании кода.
// </auto-generated>
//------------------------------------------------------------------------------

namespace ElectronicSchoolDaybook
{
    using System;
    using System.Collections.Generic;
    
    public partial class StudentParent
    {
        public int ID { get; set; }
        public int StudentID { get; set; }
        public int ParentID { get; set; }
    
        public virtual Parent Parent { get; set; }
        public virtual Student Student { get; set; }
    }
}
